--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                             <div class="card project_img">
                                 <img src="assets/images/imgProject1.png" class="card-img-top " alt="...">
                                 <div class="project_btn">
-                                    <a href="#aboutMe">
+                                    <a href="https://github.com/strings143/parking_lot" target="_blank">
                                         <div class="project_text p-4">
                                             <h3>停車場預約APP</h3>
                                             <h5 class="mt-2">該APP採用Java語言進行開發，提供車主APP預約停車的服務。</h5>
@@ -165,7 +165,7 @@
                             <div class="card project_img ">
                                 <img src="assets/images/imgProject2.png" class="card-img-top" alt="...">
                                 <div class="project_btn">
-                                    <a href="#aboutMe">
+                                    <a href="https://github.com/strings143/dcon_protocol_ui" target="_blank">
                                         <div class="project_text p-4">
                                             <h3>水下載具人機介面</h3>
                                             <h5 class="mt-2">該圖形介面採用PyQt5和Python語言，進行數據和方位感測器顯示。</h5>
@@ -179,7 +179,7 @@
                             <div class="card project_img">
                                 <img src="assets/images/imgProject3.png" class="card-img-top" alt="...">
                                 <div class="project_btn">
-                                    <a href="#aboutMe">
+                                    <a href="https://github.com/strings143/Snake-Game" target="_blank">
                                         <div class="project_text p-4">
                                             <h3>貪吃蛇遊戲</h3>
                                             <h5 class="mt-2">該貪吃蛇遊戲開發採用Python的PyGame模組，結合OpenCV函式庫進行遊玩。</h5>
@@ -195,7 +195,7 @@
                             <div class="card project_img">
                                 <img src="assets/images/imgProject4.png" class="card-img-top" alt="...">
                                 <div class="project_btn">
-                                    <a href="#aboutMe">
+                                    <a href="https://github.com/strings143/Home-Monitoring-Web" target="_blank">
                                         <div class="project_text p-4">
                                             <h3>遠端監控</h3>
                                             <h5 class="mt-2">該Web網頁後端語言採用Php語言和前端前端開發工具Bootstrap製作，透過感測器監控溫溼度和燈泡開關狀態。</h5>
@@ -209,7 +209,7 @@
                             <div class="card project_img ">
                                 <img src="assets/images/imgProject5.png" class="card-img-top" alt="...">
                                 <div class="project_btn">
-                                    <a href="#aboutMe">
+                                    <a href="https://github.com/strings143/Watermarkphoto" target="_blank">
                                         <div class="project_text p-4">
                                             <h3>圖片浮水印</h3>
                                             <h5 class="mt-2">該介面採用C#的Windows Forms進行開發，透過Webcam拍攝的照片結合該應用程式，製作簡易的照片浮水印軟體。</h5>
@@ -223,7 +223,7 @@
                             <div class="card project_img">
                                 <img src="assets/images/imgProject6.png" class="card-img-top" alt="...">
                                 <div class="project_btn">
-                                    <a href="#aboutMe">
+                                    <a href="https://github.com/strings143/course-selection-App" target="_blank">
                                         <div class="project_text p-4">
                                             <h3>選課APP</h3>
                                             <h5 class="mt-2">該App採用Flutter跨平台應用程式的Dart語言進行開發，在APP上進行學校課程加退選。</h5>
@@ -241,7 +241,7 @@
                 <div class="row">
                     <h5 class="col-lg-4 col-12 text-center"><svg class="mb-2" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
                         <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
-                      </svg> GitHub :strings143 <a href="#home" class="link-light"></a></h5>
+                      </svg> GitHub : strings143 </h5>
                     <h5 class="col-lg-4 col-12 text-center"><svg class="mb-2" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-chat-dots-fill" viewBox="0 0 16 16">
                         <path d="M16 8c0 3.866-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.584.296-1.925.864-4.181 1.234-.2.032-.352-.176-.273-.362.354-.836.674-1.95.77-2.966C.744 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7zM5 8a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm4 0a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
                       </svg> E-mail : r1106005@cloud.dyu.edu.tw</h5>
