修改錯字、電話、mail

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <ul>
                             <li>
                                 <h4>論文介紹 :
-                                    隨著網際網路在生活中的普及，對於保障網路的資訊安全，機密性、完整性和可用性，成為極其重要的議題，在這龐大的網路環境下，該如何防範網路流量中隱藏的惡意攻擊成為本論文的一大重點。入侵檢測系統（Intrusion Detection System,IDS)主要是用來檢測網路流量中入侵攻擊的行為系統，透過機器學習的技術來進行攻擊和正常行為的判斷。在機器學習領域中，特徵的保留和剔除相當重要，因此如何在模擬網路攻擊的資料集中，包持高準確率和高效能的篩選特徵，為本研究至關重要的步驟。本研究採用混合式特徵選擇，將特徵選擇中的過濾法和包裝法進行結合，提升過濾法快速剔除特徵後的準確率，改善包裝法篩選特徵子集中的低效率，並且結合XGBoost分類器作為本研究最終檢測攻擊行為的模型。
+                                    隨著網際網路在生活中的普及，對於保障網路的資訊安全，機密性、完整性和可用性，成為極其重要的議題，在這龐大的網路環境下，該如何防範網路流量中隱藏的惡意攻擊成為本論文的一大重點。入侵檢測系統（Intrusion Detection System,IDS)主要是用來檢測網路流量中入侵攻擊的行為系統，透過機器學習的技術來進行攻擊和正常行為的判斷。在機器學習領域中，特徵的保留和剔除相當重要，因此如何在模擬網路攻擊的資料集中，保持高準確率和高效能的篩選特徵，為本研究至關重要的步驟。本研究採用混合式特徵選擇，將特徵選擇中的過濾法和包裝法進行結合，提升過濾法快速剔除特徵後的準確率，改善包裝法篩選特徵子集中的低效率，並且結合XGBoost分類器作為本研究最終檢測攻擊行為的模型。
                                 </h4>
                             </li>
                             <li>                          
@@ -154,7 +154,7 @@
                                     <a href="https://github.com/strings143/parking_lot" target="_blank">
                                         <div class="project_text p-4">
                                             <h3>停車場預約APP</h3>
-                                            <h5 class="mt-2">該APP採用Java語言進行開發，提供車主APP預約停車的服務。</h5>
+                                            <h5 class="mt-2">APP採用Java語言進行開發，提供車主APP預約停車的服務。</h5>
                                             <h6>Read more</h6>
                                         </div>
                                     </a>
@@ -168,7 +168,7 @@
                                     <a href="https://github.com/strings143/dcon_protocol_ui" target="_blank">
                                         <div class="project_text p-4">
                                             <h3>水下載具人機介面</h3>
-                                            <h5 class="mt-2">該圖形介面採用PyQt5和Python語言，進行數據和方位感測器顯示。</h5>
+                                            <h5 class="mt-2">圖形介面採用PyQt5和Python語言，進行數據和方位感測器顯示。</h5>
                                             <h6>Read more</h6>
                                         </div>
                                     </a>
@@ -182,7 +182,7 @@
                                     <a href="https://github.com/strings143/Snake-Game" target="_blank">
                                         <div class="project_text p-4">
                                             <h3>貪吃蛇遊戲</h3>
-                                            <h5 class="mt-2">該貪吃蛇遊戲開發採用Python的PyGame模組，結合OpenCV函式庫進行遊玩。</h5>
+                                            <h5 class="mt-2">貪吃蛇遊戲開發採用Python的PyGame模組，結合OpenCV函式庫進行遊玩。</h5>
                                             <h6>Read more</h6>
                                         </div>
                                     </a>
@@ -198,7 +198,7 @@
                                     <a href="https://github.com/strings143/Home-Monitoring-Web" target="_blank">
                                         <div class="project_text p-4">
                                             <h3>遠端監控</h3>
-                                            <h5 class="mt-2">該Web網頁後端語言採用Php語言和前端前端開發工具Bootstrap製作，透過感測器監控溫溼度和燈泡開關狀態。</h5>
+                                            <h5 class="mt-2">Web網頁後端語言採用Php語言和前端前端開發工具Bootstrap製作，透過感測器監控溫溼度和燈泡開關狀態。</h5>
                                             <h6>Read more</h6>
                                         </div>
                                     </a>
@@ -212,7 +212,7 @@
                                     <a href="https://github.com/strings143/Watermarkphoto" target="_blank">
                                         <div class="project_text p-4">
                                             <h3>圖片浮水印</h3>
-                                            <h5 class="mt-2">該介面採用C#的Windows Forms進行開發，透過Webcam拍攝的照片結合該應用程式，製作簡易的照片浮水印軟體。</h5>
+                                            <h5 class="mt-2">介面採用C#的Windows Forms進行開發，透過Webcam拍攝的照片結合該應用程式，製作簡易的照片浮水印軟體。</h5>
                                             <h6>Read more</h6>
                                         </div>
                                     </a>
@@ -226,7 +226,7 @@
                                     <a href="https://github.com/strings143/course-selection-App" target="_blank">
                                         <div class="project_text p-4">
                                             <h3>選課APP</h3>
-                                            <h5 class="mt-2">該App採用Flutter跨平台應用程式的Dart語言進行開發，在APP上進行學校課程加退選。</h5>
+                                            <h5 class="mt-2">App採用Flutter跨平台應用程式的Dart語言進行開發，在APP上進行學校課程加退選。</h5>
                                             <h6>Read more</h6>
                                         </div>
                                     </a>
@@ -244,10 +244,10 @@
                       </svg> GitHub : strings143 </h5>
                     <h5 class="col-lg-4 col-12 text-center"><svg class="mb-2" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-chat-dots-fill" viewBox="0 0 16 16">
                         <path d="M16 8c0 3.866-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.584.296-1.925.864-4.181 1.234-.2.032-.352-.176-.273-.362.354-.836.674-1.95.77-2.966C.744 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7zM5 8a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm4 0a1 1 0 1 0-2 0 1 1 0 0 0 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
-                      </svg> E-mail : r1106005@cloud.dyu.edu.tw</h5>
+                      </svg> E-mail : stringlin1999@gmail.com</h5>
                     <h5 class="col-lg-4 col-12 text-center"><svg class="mb-2" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
-                      </svg> Cell : 09-05032089</h5>
+                      </svg> Cell : 0905032089</h5>
                 </div>
             </div>
         </section>
